# omniai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLEANUP_REPORT.md  CODEBASE_ANALYSIS_REPORT.md  DEPLOY.md  Makefile  PLANS.md  PROJECT_STRUCTURE.md  README.md  alpha-plan.md  docker-compose.backend.yml  docker-compose.override.yml  docker-compose.yml  runtime-config.example.json  start-backend.sh
backend/: .env.example  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
backend/agents/: __init__.py
backend/api/: __init__.py  admin.py  auth.py  chat.py  context_blocks.py  health.py  plan.py  projects.py  workflows.py
backend/auth/: bootstrap.py  dependencies.py  e2e_seed.py  password.py  session.py
backend/config/: settings.py
backend/core/: __init__.py  error_contract.py  exceptions.py  logging.py  middleware.py  startup_checks.py
backend/db/: __init__.py  models.py
backend/migrations/: env.py
backend/providers/: lmstudio.py  mock.py  ollama.py  openai_compat.py  registry.py
backend/scripts/: create_admin.py  migrate_sqlite_to_postgres.py  run_migrations.py
backend/services/: audit_service.py  capabilities_service.py  chat_service.py  client_events.py  retrieval_service.py  run_service.py  voice_service.py  workflow_service.py
backend/streaming/: __init__.py  sse.py
backend/tests/: test_admin_audit.py  test_auth_cors_cookies.py  test_auth_csrf_exemptions.py  test_auth_csrf_refresh.py  test_auth_refresh.py  test_auth_sessions.py  test_bootstrap_admin.py  test_chat_api.py  test_chat_rag_citations.py  test_chat_test_mode_stream.py  test_client_events_api.py  test_client_events_service.py  test_concurrency_redis.py  test_concurrency_store.py  test_cors_csrf_negative.py  test_csrf_bootstrap.py  test_diag_security.py  test_discovery_surface.py  test_e2e_seed_user.py  test_forwarded_headers.py  test_health_build_metadata.py  test_knowledge_api.py  test_log_redaction.py  test_memory_api.py  test_memory_semantic_search.py  test_ops_duckdns.py  test_password_upgrade.py  test_privacy_export_delete.py  test_production_security.py  test_providers_paths.py  test_rate_limiter_exemptions.py  test_request_size_limits.py  test_settings_cookie_samesite.py  test_startup_checks_partitioned.py  test_stream_limiter.py  test_v1_auth_csrf_matrix.py  test_v1_csrf.py  test_v1_error_envelope.py  test_v1_meta.py  test_v1_projects.py
omni-backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  fix_user.py  ngrok-setup.sh  pyproject.toml  set_pass.py  startup.sh  update_user.py
omni-backend/omni_backend/: app.py  config.py  db.py  logging_utils.py  (+3 more)
omni-contracts/: pyproject.toml
(+401 files in other folders)
