[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniai-backend"
description = "Privacy-first AI chat backend for LM Studio, Ollama, and OpenAI-compatible endpoints"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "bcrypt>=4.1.0,<5.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "PyJWT[crypto]>=2.8.0,<3.0.0",
    "httpx>=0.26.0,<0.28.0",
    "python-multipart>=0.0.6,<0.1.0",
    "email-validator>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "httpx>=0.26.0",
    "bandit>=1.7.0,<2.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "ruff>=0.1.0,<0.4.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
